# muffin-session

./: .bumpversion.cfg  .coveragerc  .git-commits.yaml  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  Changelog  MANIFEST.in  Makefile  README.rst  example.py  muffin_session.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tests.py
.github/workflows/: release.yml  tests.yml
muffin_session/: __init__.py
requirements/: requirements-tests.txt  requirements.txt
