[bumpversion]
commit = True
current_version = 0.10.16
files = muffin_session/__init__.py
tag = True
tag_name = {new_version}

[wheel]
python-tag = py3

[metadata]
name = muffin-session
version = attr: muffin_session.__version__
url = https://github.com/klen/muffin-session
description = Signed Cookie-Based HTTP sessions for Muffin framework
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = asyncio, trio, asgi, web, muffin, cookie, session
project_urls = 
	Documentation = https://github.com/klen/muffin-session
	Source code = https://github.com/klen/muffin-session
	Issue tracker = https://github.com/klen/muffin-session/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Framework :: AsyncIO
	Framework :: Trio

[options]
packages = muffin_session
include_package_data = True
python_requires = >= 3.7
install_requires = 
	muffin          >= 0.67.1
	asgi-sessions   >= 0.8.3

[options.extras_require]
tests = 
	pytest
	pytest-aio[curio,trio]
	pytest-mypy

[pylama]
ignore = D211,D213

[pylama:setup.py]
ignore = D

[pylama:tests.py]
ignore = D

[tool:pytest]
addopts = -xsv --mypy

[tox:tox]
envlist = py37,py38,py39

[testenv]
deps = -e .[tests]
commands = 
	pytest tests.py
